# lazytex

./: .gitignore  README.MD  pyproject.toml
lazytex/: __main__.py  text_utils.py
tests/: test_conversions.py  test_entry_point.py  test_text_utils.py
tests/test_data/: hammack_example.txt  new_test.txt  reference.md  test_dummy_out.txt  test_expression.txt  test_simple_expr.txt
texsanity/: text_utils.py
