[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lazytex"
description = "A tool for formatting logic expressions as LaTeX tables"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = ["pytest>=6", "coverage[toml]>=5.5", "pyperclip>=1.8.2"]
version = "0.1.0"



[project.scripts]
lazytex = "lazytex.__main__:main"

[project.urls]
"Homepage" = "https://github.com/al-ce/lazytex"

